--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ background-color:#F875AA;
 color: ghostwhite;
 padding: 20px;
 font-size: 32px;
-border-bottom: white;
+border-bottom: 2px solid white;
 }
