--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ padding: 20px;
 font-size: 32px;
 border-bottom: 2px solid white;
 }
+
+section{
+background-image: linear-gradient(#F875AA, #FFDFDF);
+
+
+}
