--- a/style.css
+++ b/style.css
@@ -14,6 +14,6 @@ border-bottom: 2px solid white;
 
 section{
 background-image: linear-gradient(#F875AA, #FFDFDF);
-
-
+padding-top: 80px;
+padding-bottom: 80px;
 }
